# repovision

./: .gitignore  AWESOME_PYTHON_PR.md  CHANGELOG.md  COMPLETED.md  CONTRIBUTING.md  LICENSE  PROMOTION.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  V2EX_POST.md  pyproject.toml  repovision-report.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  tests.yml
repovision/: __init__.py  __main__.py  cli.py
repovision/core/: __init__.py  analyzer.py  git_utils.py
repovision/display/: __init__.py  html_report.py  terminal.py
screenshots/: dashboard.txt  hotspots.txt  quick.txt  report.html
tests/: conftest.py  test_cli.py  test_core.py  test_display.py  test_report.py
